# diy-ucy

./: .gitignore  README.md  calcs.c  calcs.h  constants.c  constants.h  input.c  input.h  main.c  meson.build  render.c  render.h  test.juice
menus/: appmenu.c  appmenu.h  callbacks.c  callbacks.h  save.c  save.h  types.c  types.h
